useEffect added on login, HeadHunter page to resolve overflowconflict

--- a/frontend/src/Styles/Components/navigation.scss
+++ b/frontend/src/Styles/Components/navigation.scss
@@ -1,9 +1,6 @@
 @import "../mixins.scss";
 
 
-body {
-    overflow: visible !important;
-}
 
 .nav-bar {
     display: flex;
