--- a/frontend/src/Styles/Pages/Login.scss
+++ b/frontend/src/Styles/Pages/Login.scss
@@ -1,10 +1,8 @@
 @import "../mixins.scss";
 
-html,body{
-    margin: 0;
-}
 
 .container{
+
     height: 100vh;
     width: 100%;
     display: flex;
